# Sistema-de-Persistencia-Indexacao-de-Dados

./: .gitignore  CMakeLists.txt  README.md
arbore B/: Makefile  README.md  main.cpp
arbore B/Carta/: carta.cpp  carta.hpp
arbore B/Gerenciador De Arquivo/: gerenciador_de_arquivo.cpp  gerenciador_de_arquivo.hpp
arbore B/Indice Primario/: indice_primario.cpp  indice_primario.hpp
arbore B/Indice Secundario/: indice_secundario.cpp  indice_secundario.hpp
arbore B/Led/: led.cpp  led.hpp
arbore B/Menu/: menu.cpp  menu.hpp
arbore B/Operacoes Crud/: operacoes_crud.cpp  operacoes_crud.hpp
arbore B/tests/: test_arbore  test_arbore.cpp
